# core-platform-software-templates

./: .yamllint  AGENTS.md  Makefile  README.md  schema.yaml
.github/workflows/: cd.yaml  ci.yaml  trigger-render.yaml  validate.yaml
blank/: template.yaml
blank/skeleton/: Makefile  README.md
docker/web/: template.yaml
docker/web/skeleton/: AGENTS.md  Dockerfile  Makefile  README.md  helm-values.yaml
go/web/: template.yaml
go/web/skeleton/: AGENTS.md  Dockerfile  Makefile  (+4 more)
infra/cloudsql/: template.yaml
infra/kafka/: template.yaml
infra/tofu/: template.yaml
infra/urlrouter/: template.yaml
java/web/: template.yaml
monitoring-stack/: template.yaml
monitoring-stack/skeleton/: AGENTS.md  Makefile  README.md
nextjs/web/: template.yaml
python/web/: template.yaml
python/web/skeleton/: .gitignore  .p2p-security-ignore.yaml  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
python/web/skeleton/.github/workflows/: extended-test.yaml  fast-feedback.yaml
python/web/skeleton/p2p/config/: common.yaml  nft.yaml
python/web/skeleton/p2p/scripts/: helm-test.sh
python/web/skeleton/p2p/tests/extended/: Dockerfile
python/web/skeleton/p2p/tests/functional/: Dockerfile
python/web/skeleton/p2p/tests/integration/: Dockerfile  environment.py
python/web/skeleton/p2p/tests/integration/steps/: integration_steps.py
python/web/skeleton/p2p/tests/nft/: Dockerfile
python/web/skeleton/p2p/tests/nft/resources/load-testing/: validate.sh
python/web/skeleton/src/app/: handler.py  internal.py  main.py
python/web/skeleton/tests/: test_handler.py
static/nextra/: template.yaml
tests/: cloudsql_template_test.sh  java_template_test.sh  nextjs_template_test.sh  template_docs_test.sh
(+258 files in other folders)
